k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: cptmutchell/auth-service:v1
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /auth/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:

            httpGet:
              path: /auth/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 8081
      protocol: TCP
      nodePort: 30001
      targetPort: 8081
