k8s/convert-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-deployment
spec:
  selector:
    matchLabels:
      app: convert
  replicas: 1
  template:
    metadata:
      labels:
        app: convert
    spec:
      containers:
        - name: auth
          image: cptmutchell/convert-service:v1
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: convert-service
spec:
  type: NodePort
  selector:
    app: convert
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      nodePort: 30002
