k8s/history-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-deployment
spec:
  selector:
    matchLabels:
      app: history
  replicas: 1
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - name: history
          image: cptmutchell/history-service:v1
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: history-service
spec:
  type: NodePort
  selector:
    app: history
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      nodePort: 30003
