k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-converter

spec:

  rules:
     - host: myconverter
       http:
        paths:
            - path: /auth
              pathType: Prefix
              backend:
                service:
                  name: auth-service
                  port:
                    number: 8081

            - path: /converter
              pathType: Prefix
              backend:
                service:
                  name: convert-service
                  port:
                    number: 8082
            - path: /history
              pathType: Prefix
              backend:
                service:
                  name: history-service
                  port:
                    number: 8083
